--- a/manifest.json
+++ b/manifest.json
@@ -17,11 +17,21 @@
         "128": "images/128x128.png"
     }
   },
-
     "icons": {
         "16": "images/16x16.png",
         "32": "images/32x32.png",
         "48": "images/48x48.png",
         "128": "images/128x128.png"
-    }
+    },
+
+    "background": {
+        "service_worker": "background.js"
+    },
+
+    "content_scripts": [
+        {
+            "matches": ["<all_urls>"],
+            "js": ["scripts/content.js"]
+        }
+    ]
 }
